# satchmo

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.mo
src/: assert.c  exec.c  exec.h  expr.c  expr.h  func.c  func.h  hashtable.c  hashtable.h  lang.lex  lang.y  lexer.h  log.h  main.c  module.c  module.h  stack.c  stack.h  stmt.c  stmt.h  str.c  str.h  symbol.c  symbol.h  test_main.c  token.c  token.h
src/core/: hashtable.c  hashtable.h  log.c  log.h  stack.c  stack.h  str.c  str.h
src/parser/: expr.c  expr.h  func.c  func.h  lang.lex  lang.y  module.c  module.h  stmt.c  stmt.h  token.c  token.h
src/runtime/: builtin.c  builtin.h  error.c  error.h  exec.c  exec.h  gc.h  value.c  value.h
test/: hash_test.c  stack_test.c  stmt_test.c  str_test.c  symb_test.c  test.h  test_main.c
